--- a/index.html
+++ b/index.html
@@ -9,44 +9,49 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body class="bg">
+<body>
 
-    <div class="header">
-        <div class="header-logo">
-            <img src="image/Logo.svg" class="header-logo-img" alt="" width="15px">
-        </div>
-        <div class="header-link">
-            <a href="" style="text-decoration: none;">Home</a>
-            <a href="" style="text-decoration: none;">Sobre mim</a>
-            <a href="" style="text-decoration: none;">Portfolio</a>
-            <a href="" style="text-decoration: none;">Skills</a>
-            <a href="" style="text-decoration: none;">Carreira</a>
-            <a href="" style="text-decoration: none;">Recomendacoes</a>
-            <a href="" style="text-decoration: none;">Contato</a>
-        </div>
-    </div>
+    <div class="app">
 
-    <div class="hero">
-        <div class="hero-title">
-            <p>👋 Saudações!</p>
-            <p>Henrique <br> Sousa</p>
-            <p>Front-end developer · UI designer</p>
-            <div class="hero-title-icon">
-                <ion-icon name="logo-linkedin"></ion-icon>
-                <ion-icon name="logo-github"></ion-icon>
-                <ion-icon name="logo-behance"></ion-icon>
+
+
+        <div class="header">
+            <div class="header-logo">
+                <img src="image/Logo.svg" class="header-logo-img" alt="" width="15px">
+            </div>
+            <div class="header-link">
+                <a href="" style="text-decoration: none;">Home</a>
+                <a href="" style="text-decoration: none;">Sobre mim</a>
+                <a href="" style="text-decoration: none;">Portfolio</a>
+                <a href="" style="text-decoration: none;">Skills</a>
+                <a href="" style="text-decoration: none;">Carreira</a>
+                <a href="" style="text-decoration: none;">Recomendacoes</a>
+                <a href="" style="text-decoration: none;">Contato</a>
             </div>
         </div>
-        <div class="hero-img">
-            <img src="image/AvatarAndIcons.svg" class="header-logo-img" alt="" width="315px">
-        </div>
-        <div class="hero-btn">
-            <p>Baixar CV <ion-icon name="arrow-down-outline"></ion-icon></p>
-            <p><ion-icon name="logo-whatsapp"></ion-icon> Vamos conversar</p>
+
+        <div class="hero">
+            <div class="hero-title">
+                <p>👋 Saudações!</p>
+                <p>Henrique <br> Sousa</p>
+                <p>Front-end developer · UI designer</p>
+                <div class="hero-title-icon">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                    <ion-icon name="logo-github"></ion-icon>
+                    <ion-icon name="logo-behance"></ion-icon>
+                </div>
+            </div>
+            <div class="hero-img">
+                <img src="image/AvatarAndIcons.svg" class="header-logo-img" alt="" width="315px">
+            </div>
+            <div class="hero-btn">
+                <p>Baixar CV <ion-icon name="arrow-down-outline"></ion-icon></p>
+                <p><ion-icon name="logo-whatsapp"></ion-icon> Vamos conversar</p>
+            </div>
         </div>
     </div>
-
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
